--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>To Do List</title>
+	<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Noto+Sans+SC&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script type="text/javascript" src="assets/lib/jquery-3.5.1.min.js"></script>
@@ -15,7 +16,9 @@
 		
 		<ul>
 			<li><span class="del"><i class="fas fa-trash"></i></span><span class="strike"> <i class="fas fa-strikethrough"></i></span> write a book</li>
-			<li><span class="del">X</span><span class="strike">Y</span> Adopt a hobby</li>
+			<li><span class="del"><i class="fas fa-trash"></i></span><span class="strike"> <i class="fas fa-strikethrough"></i></span> Adopt a hobby</li>
+			<li><span class="del"><i class="fas fa-trash"></i></span><span class="strike"> <i class="fas fa-strikethrough"></i></span> Do integration</li>
+			<li><span class="del"><i class="fas fa-trash"></i></span><span class="strike"> <i class="fas fa-strikethrough"></i></span> Do coding</li>
 		</ul>
 
 
